--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     <table role="presentation" class="container" width="100%" border="0" cellspacing="0"
                                         cellpadding="0">
                                         <tr>
-                                            <td background="https://i.ibb.co/Gp7JCJz/portada.jpg" width="800"
+                                            <td background="https://i.ibb.co/txnmkHx/portada-boy.jpg" width="800"
                                                 height="411"
                                                 style="background-position:center top;background-repeat:no-repeat;background-size: cover;">
                                                 <table align="left" role="presentation" border="0" cellspacing="0"
@@ -127,7 +127,7 @@
                                         cellpadding="0">
                                         <tr>
                                             <td align="center" valign="top">
-                                                <img src="https://i.ibb.co/t2LjNNq/agosto-cade-educacion.jpg"
+                                                <img src="https://i.ibb.co/80DzHNZ/agosto-cade-educacion-corr.jpg"
                                                     alt="agosto-cadeEducacion" width="800" height="auto"
                                                     style="display:block;">
                                             </td>
@@ -206,7 +206,7 @@
                                                     border="0" cellspacing="0" cellpadding="0">
                                                     <tr>
                                                         <td>
-                                                            <img src="https://i.ibb.co/Cv4wGHj/hibrida-lima.jpg"
+                                                            <img src="https://i.ibb.co/yPdpTGZ/hibrida-lima-corr.jpg"
                                                                 width="800" height="auto" alt="hibrida lima" style="display:block;">
                                                         </td>
                                                     </tr>
